apps/plane/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane
  namespace: plane
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: ingress
  hostnames:
    - plane.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: ""
          kind: Service
          name: plane-app-api
          port: 8000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - group: ""
          kind: Service
          name: plane-app-api
          port: 8000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /spaces
      backendRefs:
        - group: ""
          kind: Service
          name: plane-app-space
          port: 3000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /god-mode
      backendRefs:
        - group: ""
          kind: Service
          name: plane-app-admin
          port: 3000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /live/
      backendRefs:
        - group: ""
          kind: Service
          name: plane-app-live
          port: 3000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /plane-uploads
      backendRefs:
        - group: ""
          kind: Service
          name: garage
          namespace: garage
          port: 3900
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: plane-app-web
          port: 3000
          weight: 1
